# ciri

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  nigiri.c
cmake/: Findargtable3.cmake  Findjsonc.cmake  Findlibuv.cmake  Findlmdb.cmake  Findlogger.cmake  argtable3_settings.cmake  compilation_settings.cmake  entangled_settings.cmake  fix_entangled.cmake  jsonc_settings.cmake  libuv_settings.cmake  lmdb_settings.cmake  logger_settings.cmake  misc.cmake  sqlite_settings.cmake
cmake/entangled/: CMakeLists.txt
cmake/in/: argtable3.in  config.json.in  json-c.in  libuv.in  lmdb.in
cmake/logger/: CMakeLists.txt
cmake/sqlite/: CMakeLists.txt
source/: ciri.c
source/convert/: bytes.h  trit_array.c  trit_array.h  trit_byte.c  trit_byte.h  trit_long.c  trit_long.h  trit_tryte.c  trit_tryte.h  trits.h  tryte.h
source/crypt/: const.h  curl-p.c  curl-p.h  digest.c  digest.h  indices.h
source/db/: base.c  base.h  db.c  db.h
source/server/: defs.h  queue.h  server.c  server.h  test_server.c  test_server.h  udp_server.c  udp_server.h  udp_worker.c  udp_worker.h
source/transaction/: transaction.c  transaction.h
source/utils/: config_helper.c  config_helper.h  errors.h  file_helper.c  file_helper.h  logger_helper.c  logger_helper.h  stdint.h
source/utils/handles/: lock.c  lock.h  task.h
